--- a/public/widget-canciones.html
+++ b/public/widget-canciones.html
@@ -7,13 +7,16 @@
 <body>
 dentificar el cuerpo de la tabla con una id ya que será donde agregaremos las canciones.
 <div id="widget-canciones" >
+    <input type="text" class="form-control" placeholder="Filtrar por nombre"
+           id="filtro-nombre"/>
+    <button class="btn btn-primary" onclick="widgetAgregar()">Nueva Cancion</button>
     <button class="btn" onclick="cargarCanciones()" >Actualizar</button>
     <table class="table table-hover">
         <thead>
         <tr>
-            <th>Nombre</th>
+            <th><a onclick="ordenarPorNombre()">Nombre</a></th>
             <th>Genero</th>
-            <th>Precio</th>
+            <th><a onclick="ordenarPorPrecio()">Precio</a></th>
             <th class="col-md-1"></th>
         </tr>
         </thead>
@@ -24,6 +27,8 @@ dentificar el cuerpo de la tabla con una id ya que será donde agregaremos las c
 </div>
 
 <script>
+    window.history.pushState("", "", "/cliente.html?w=login");
+
     var canciones;
     function cargarCanciones(){
         $.ajax({
@@ -85,6 +90,31 @@ dentificar el cuerpo de la tabla con una id ya que será donde agregaremos las c
         idCancionSeleccionada = _id;
         $( "#contenedor-principal" ).load( "widget-detalles.html");
     }
+    $('#filtro-nombre').on('input',function(e){
+        var cancionesFiltradas = [];
+        var nombreFiltro = $("#filtro-nombre").val();
+
+        for (i = 0; i < canciones.length; i++) {
+            if (canciones[i].nombre.indexOf(nombreFiltro) != -1 ){
+                cancionesFiltradas.push(canciones[i]);
+            }
+        }
+        actualizarTabla(cancionesFiltradas);
+    });
+    var precioDsc = true;
+    function ordenarPorPrecio(){
+        if (precioDsc){
+            canciones.sort(function(a, b) {
+                return parseFloat(a.precio) - parseFloat(b.precio);
+            });
+        } else {
+            canciones.sort(function(a, b) {return parseFloat(b.precio) - parseFloat(a.precio);
+            });
+        }
+        actualizarTabla(canciones);
+        precioDsc = !precioDsc; //invertir
+    }
+
 </script>
 
 }
